include/bgfx/c99/bgfx.h


typedef enum bgfx_renderer_type
{
    BGFX_RENDERER_TYPE_NOOP,                  
    BGFX_RENDERER_TYPE_DIRECT3D9,             
    BGFX_RENDERER_TYPE_DIRECT3D11,            
    BGFX_RENDERER_TYPE_DIRECT3D12,            
    BGFX_RENDERER_TYPE_GNM,                   
    BGFX_RENDERER_TYPE_METAL,                 
    BGFX_RENDERER_TYPE_NVN,                   
    BGFX_RENDERER_TYPE_OPENGLES,              
    BGFX_RENDERER_TYPE_OPENGL,                
    BGFX_RENDERER_TYPE_VULKAN,                
    BGFX_RENDERER_TYPE_WEBGPU,                
    BGFX_RENDERER_TYPE_COUNT
} bgfx_renderer_type_t;
typedef enum bgfx_access
{
    BGFX_ACCESS_READ,                         
    BGFX_ACCESS_WRITE,                        
    BGFX_ACCESS_READWRITE,                    
    BGFX_ACCESS_COUNT
} bgfx_access_t;
typedef enum bgfx_texture_format
{
    BGFX_TEXTURE_FORMAT_BC1,                  
    BGFX_TEXTURE_FORMAT_BC2,                  
    BGFX_TEXTURE_FORMAT_BC3,                  
    BGFX_TEXTURE_FORMAT_BC4,                  
    BGFX_TEXTURE_FORMAT_BC5,                  
    BGFX_TEXTURE_FORMAT_BC6H,                 
    BGFX_TEXTURE_FORMAT_BC7,                  
    BGFX_TEXTURE_FORMAT_ETC1,                 
    BGFX_TEXTURE_FORMAT_ETC2,                 
    BGFX_TEXTURE_FORMAT_ETC2A,                
    BGFX_TEXTURE_FORMAT_ETC2A1,               
    BGFX_TEXTURE_FORMAT_PTC12,                
    BGFX_TEXTURE_FORMAT_PTC14,                
    BGFX_TEXTURE_FORMAT_PTC12A,               
    BGFX_TEXTURE_FORMAT_PTC14A,               
    BGFX_TEXTURE_FORMAT_PTC22,                
    BGFX_TEXTURE_FORMAT_PTC24,                
    BGFX_TEXTURE_FORMAT_ATC,                  
    BGFX_TEXTURE_FORMAT_ATCE,                 
    BGFX_TEXTURE_FORMAT_ATCI,                 
    BGFX_TEXTURE_FORMAT_ASTC4X4,              
    BGFX_TEXTURE_FORMAT_ASTC5X5,              
    BGFX_TEXTURE_FORMAT_ASTC6X6,              
    BGFX_TEXTURE_FORMAT_ASTC8X5,              
    BGFX_TEXTURE_FORMAT_ASTC8X6,              
    BGFX_TEXTURE_FORMAT_ASTC10X5,             
    BGFX_TEXTURE_FORMAT_UNKNOWN,              
    BGFX_TEXTURE_FORMAT_R1,                   
    BGFX_TEXTURE_FORMAT_A8,                   
    BGFX_TEXTURE_FORMAT_R8,                   
    BGFX_TEXTURE_FORMAT_R8I,                  
    BGFX_TEXTURE_FORMAT_R8U,                  
    BGFX_TEXTURE_FORMAT_R8S,                  
    BGFX_TEXTURE_FORMAT_R16,                  
    BGFX_TEXTURE_FORMAT_R16I,                 
    BGFX_TEXTURE_FORMAT_R16U,                 
    BGFX_TEXTURE_FORMAT_R16F,                 
    BGFX_TEXTURE_FORMAT_R16S,                 
    BGFX_TEXTURE_FORMAT_R32I,                 
    BGFX_TEXTURE_FORMAT_R32U,                 
    BGFX_TEXTURE_FORMAT_R32F,                 
    BGFX_TEXTURE_FORMAT_RG8,                  
    BGFX_TEXTURE_FORMAT_RG8I,                 
    BGFX_TEXTURE_FORMAT_RG8U,                 
    BGFX_TEXTURE_FORMAT_RG8S,                 
    BGFX_TEXTURE_FORMAT_RG16,                 
    BGFX_TEXTURE_FORMAT_RG16I,                
    BGFX_TEXTURE_FORMAT_RG16U,                
    BGFX_TEXTURE_FORMAT_RG16F,                
    BGFX_TEXTURE_FORMAT_RG16S,                
    BGFX_TEXTURE_FORMAT_RG32I,                
    BGFX_TEXTURE_FORMAT_RG32U,                
    BGFX_TEXTURE_FORMAT_RG32F,                
    BGFX_TEXTURE_FORMAT_RGB8,                 
    BGFX_TEXTURE_FORMAT_RGB8I,                
    BGFX_TEXTURE_FORMAT_RGB8U,                
    BGFX_TEXTURE_FORMAT_RGB8S,                
    BGFX_TEXTURE_FORMAT_RGB9E5F,              
    BGFX_TEXTURE_FORMAT_BGRA8,                
    BGFX_TEXTURE_FORMAT_RGBA8,                
    BGFX_TEXTURE_FORMAT_RGBA8I,               
    BGFX_TEXTURE_FORMAT_RGBA8U,               
    BGFX_TEXTURE_FORMAT_RGBA8S,               
    BGFX_TEXTURE_FORMAT_RGBA16,               
    BGFX_TEXTURE_FORMAT_RGBA16I,              
    BGFX_TEXTURE_FORMAT_RGBA16U,              
    BGFX_TEXTURE_FORMAT_RGBA16F,              
    BGFX_TEXTURE_FORMAT_RGBA16S,              
    BGFX_TEXTURE_FORMAT_RGBA32I,              
    BGFX_TEXTURE_FORMAT_RGBA32U,              
    BGFX_TEXTURE_FORMAT_RGBA32F,              
    BGFX_TEXTURE_FORMAT_R5G6B5,               
    BGFX_TEXTURE_FORMAT_RGBA4,                
    BGFX_TEXTURE_FORMAT_RGB5A1,               
    BGFX_TEXTURE_FORMAT_RGB10A2,              
    BGFX_TEXTURE_FORMAT_RG11B10F,             
    BGFX_TEXTURE_FORMAT_UNKNOWNDEPTH,         
    BGFX_TEXTURE_FORMAT_D16,                  
    BGFX_TEXTURE_FORMAT_D24,                  
    BGFX_TEXTURE_FORMAT_D24S8,                
    BGFX_TEXTURE_FORMAT_D32,                  
    BGFX_TEXTURE_FORMAT_D16F,                 
    BGFX_TEXTURE_FORMAT_D24F,                 
    BGFX_TEXTURE_FORMAT_D32F,                 
    BGFX_TEXTURE_FORMAT_D0S8,                 
    BGFX_TEXTURE_FORMAT_COUNT
} bgfx_texture_format_t;
typedef enum bgfx_uniform_type
{
    BGFX_UNIFORM_TYPE_SAMPLER,                
    BGFX_UNIFORM_TYPE_END,                    
    BGFX_UNIFORM_TYPE_VEC4,                   
    BGFX_UNIFORM_TYPE_MAT3,                   
    BGFX_UNIFORM_TYPE_MAT4,                   
    BGFX_UNIFORM_TYPE_COUNT
} bgfx_uniform_type_t;
typedef enum bgfx_topology
{
    BGFX_TOPOLOGY_TRI_LIST,                   
    BGFX_TOPOLOGY_TRI_STRIP,                  
    BGFX_TOPOLOGY_LINE_LIST,                  
    BGFX_TOPOLOGY_LINE_STRIP,                 
    BGFX_TOPOLOGY_POINT_LIST,                 
    BGFX_TOPOLOGY_COUNT
} bgfx_topology_t;
typedef enum bgfx_topology_convert
{
    BGFX_TOPOLOGY_CONVERT_TRI_LIST_FLIP_WINDING, 
    BGFX_TOPOLOGY_CONVERT_TRI_STRIP_FLIP_WINDING, 
    BGFX_TOPOLOGY_CONVERT_TRI_LIST_TO_LINE_LIST, 
    BGFX_TOPOLOGY_CONVERT_TRI_STRIP_TO_TRI_LIST, 
    BGFX_TOPOLOGY_CONVERT_LINE_STRIP_TO_LINE_LIST, 
    BGFX_TOPOLOGY_CONVERT_COUNT
} bgfx_topology_convert_t;
typedef enum bgfx_topology_sort
{
    BGFX_TOPOLOGY_SORT_DIRECTION_FRONT_TO_BACK_MIN, 
    BGFX_TOPOLOGY_SORT_DIRECTION_FRONT_TO_BACK_AVG, 
    BGFX_TOPOLOGY_SORT_DIRECTION_FRONT_TO_BACK_MAX, 
    BGFX_TOPOLOGY_SORT_DIRECTION_BACK_TO_FRONT_MIN, 
    BGFX_TOPOLOGY_SORT_DIRECTION_BACK_TO_FRONT_AVG, 
    BGFX_TOPOLOGY_SORT_DIRECTION_BACK_TO_FRONT_MAX, 
    BGFX_TOPOLOGY_SORT_DISTANCE_FRONT_TO_BACK_MIN, 
    BGFX_TOPOLOGY_SORT_DISTANCE_FRONT_TO_BACK_AVG, 
    BGFX_TOPOLOGY_SORT_DISTANCE_FRONT_TO_BACK_MAX, 
    BGFX_TOPOLOGY_SORT_DISTANCE_BACK_TO_FRONT_MIN, 
    BGFX_TOPOLOGY_SORT_DISTANCE_BACK_TO_FRONT_AVG, 
    BGFX_TOPOLOGY_SORT_DISTANCE_BACK_TO_FRONT_MAX, 
    BGFX_TOPOLOGY_SORT_COUNT
} bgfx_topology_sort_t;
typedef enum bgfx_view_mode
{
    BGFX_VIEW_MODE_DEFAULT,                   
    BGFX_VIEW_MODE_SEQUENTIAL,                
    BGFX_VIEW_MODE_DEPTH_ASCENDING,           
    BGFX_VIEW_MODE_DEPTH_DESCENDING,          
    BGFX_VIEW_MODE_COUNT
} bgfx_view_mode_t;
typedef enum bgfx_render_frame
{
    BGFX_RENDER_FRAME_NO_CONTEXT,             
    BGFX_RENDER_FRAME_RENDER,                 
    BGFX_RENDER_FRAME_TIMEOUT,                
    BGFX_RENDER_FRAME_EXITING,                
    BGFX_RENDER_FRAME_COUNT
} bgfx_render_frame_t;
typedef uint16_t bgfx_view_id_t;
typedef struct bgfx_allocator_interface_s
{
    const struct bgfx_allocator_vtbl_s* vtbl;
} bgfx_allocator_interface_t;
typedef struct bgfx_callback_interface_s
{
    const struct bgfx_callback_vtbl_s* vtbl;
} bgfx_callback_interface_t;
typedef struct bgfx_index_buffer_handle_s { uint16_t idx; } bgfx_index_buffer_handle_t;
typedef struct bgfx_texture_handle_s { uint16_t idx; } bgfx_texture_handle_t;
typedef struct bgfx_vertex_buffer_handle_s { uint16_t idx; } bgfx_vertex_buffer_handle_t;
typedef struct bgfx_vertex_layout_handle_s { uint16_t idx; } bgfx_vertex_layout_handle_t;
typedef struct bgfx_caps_gpu_s
{
    uint16_t             vendorId;           
    uint16_t             deviceId;           
} bgfx_caps_gpu_t;
typedef struct bgfx_caps_limits_s
{
    uint32_t             maxDrawCalls;       
    uint32_t             maxBlits;           
    uint32_t             maxTextureSize;     
    uint32_t             maxTextureLayers;   
    uint32_t             maxViews;           
    uint32_t             maxFrameBuffers;    
    uint32_t             maxFBAttachments;   
    uint32_t             maxPrograms;        
    uint32_t             maxShaders;         
    uint32_t             maxTextures;        
    uint32_t             maxTextureSamplers; 
    uint32_t             maxComputeBindings; 
    uint32_t             maxVertexLayouts;   
    uint32_t             maxVertexStreams;   
    uint32_t             maxIndexBuffers;    
    uint32_t             maxVertexBuffers;   
    uint32_t             maxDynamicIndexBuffers; 
    uint32_t             maxDynamicVertexBuffers; 
    uint32_t             maxUniforms;        
    uint32_t             maxOcclusionQueries; 
    uint32_t             maxEncoders;        
    uint32_t             minResourceCbSize;  
    uint32_t             transientVbSize;    
    uint32_t             transientIbSize;    
} bgfx_caps_limits_t;
typedef struct bgfx_caps_s
{
    bgfx_renderer_type_t rendererType;       
    uint64_t             supported;
    uint16_t             vendorId;           
    uint16_t             deviceId;           
    bool                 homogeneousDepth;   
    bool                 originBottomLeft;   
    uint8_t              numGPUs;            
    bgfx_caps_gpu_t      gpu[4];             
    bgfx_caps_limits_t   limits;             
    uint16_t             formats[BGFX_TEXTURE_FORMAT_COUNT];
} bgfx_caps_t;
typedef struct bgfx_internal_data_s
{
    const bgfx_caps_t*   caps;               
    void*                context;            
} bgfx_internal_data_t;
typedef struct bgfx_platform_data_s
{
    void*                ndt;                
    void*                nwh;
    void*                context;            
    void*                backBuffer;
    void*                backBufferDS;
} bgfx_platform_data_t;
typedef struct bgfx_resolution_s
{
    bgfx_texture_format_t format;            
    uint32_t             width;              
    uint32_t             height;             
    uint32_t             reset;              
    uint8_t              numBackBuffers;     
    uint8_t              maxFrameLatency;    
} bgfx_resolution_t;
typedef struct bgfx_init_limits_s
{
    uint16_t             maxEncoders;        
    uint32_t             minResourceCbSize;  
    uint32_t             transientVbSize;    
    uint32_t             transientIbSize;    
} bgfx_init_limits_t;
typedef struct bgfx_init_s
{
    bgfx_renderer_type_t type;
    uint16_t             vendorId;
    uint16_t             deviceId;
    uint64_t             capabilities;       
    bool                 debug;              
    bool                 profile;            
    bgfx_platform_data_t platformData;       
    bgfx_resolution_t    resolution;         
    bgfx_init_limits_t   limits;             
    bgfx_callback_interface_t* callback;
    bgfx_allocator_interface_t* allocator;
} bgfx_init_t;
typedef struct bgfx_memory_s
{
    uint8_t*             data;               
    uint32_t             size;               
} bgfx_memory_t;
typedef struct bgfx_transient_index_buffer_s
{
    uint8_t*             data;               
    uint32_t             size;               
    uint32_t             startIndex;         
    bgfx_index_buffer_handle_t handle;       
    bool                 isIndex16;          
} bgfx_transient_index_buffer_t;
typedef struct bgfx_transient_vertex_buffer_s
{
    uint8_t*             data;               
    uint32_t             size;               
    uint32_t             startVertex;        
    uint16_t             stride;             
    bgfx_vertex_buffer_handle_t handle;      
    bgfx_vertex_layout_handle_t layoutHandle; 
} bgfx_transient_vertex_buffer_t;
typedef struct bgfx_instance_data_buffer_s
{
    uint8_t*             data;               
    uint32_t             size;               
    uint32_t             offset;             
    uint32_t             num;                
    uint16_t             stride;             
    bgfx_vertex_buffer_handle_t handle;      
} bgfx_instance_data_buffer_t;
typedef struct bgfx_texture_info_s
{
    bgfx_texture_format_t format;            
    uint32_t             storageSize;        
    uint16_t             width;              
    uint16_t             height;             
    uint16_t             depth;              
    uint16_t             numLayers;          
    uint8_t              numMips;            
    uint8_t              bitsPerPixel;       
    bool                 cubeMap;            
} bgfx_texture_info_t;
typedef struct bgfx_uniform_info_s
{
    char                 name[256];          
    bgfx_uniform_type_t  type;               
    uint16_t             num;                
} bgfx_uniform_info_t;
typedef struct bgfx_attachment_s
{
    bgfx_access_t        access;             
    bgfx_texture_handle_t handle;            
    uint16_t             mip;                
    uint16_t             layer;              
    uint16_t             numLayers;          
    uint8_t              resolve;            
} bgfx_attachment_t;
typedef struct bgfx_transform_s
{
    float*               data;               
    uint16_t             num;                
} bgfx_transform_t;
typedef struct bgfx_view_stats_s
{
    char                 name[256];          
    bgfx_view_id_t       view;               
    int64_t              cpuTimeBegin;       
    int64_t              cpuTimeEnd;         
    int64_t              gpuTimeBegin;       
    int64_t              gpuTimeEnd;         
} bgfx_view_stats_t;
typedef struct bgfx_encoder_stats_s
{
    int64_t              cpuTimeBegin;       
    int64_t              cpuTimeEnd;         
} bgfx_encoder_stats_t;